--- a/src/assets/stylesheets/PythonRunner.scss
+++ b/src/assets/stylesheets/PythonRunner.scss
@@ -118,6 +118,12 @@
   bottom: 100%;
 }
 
+.main-svg:last-of-type {
+  position: relative;
+  bottom: 200%;
+}
+
+
   .--light .output-panel--single, .--dark .output-panel--single {
     border-block-end: none;
 }
