--- a/src/assets/stylesheets/EditorPanel.scss
+++ b/src/assets/stylesheets/EditorPanel.scss
@@ -1,5 +1,5 @@
-@use './rpf_design_system/spacing' as *;
-@use './rpf_design_system/font-size' as *;
+@use "./rpf_design_system/spacing" as *;
+@use "./rpf_design_system/font-size" as *;
 
 .editor {
   display: flex;
@@ -17,6 +17,7 @@
 
     .cm-scroller {
       overflow: auto;
+      scrollbar-width: thin;
       overscroll-behavior-x: none;
 
       .cm-content {
