--- a/src/assets/stylesheets/EditorPanel.scss
+++ b/src/assets/stylesheets/EditorPanel.scss
@@ -1,6 +1,22 @@
 @use "./rpf_design_system/spacing" as *;
 @use "./rpf_design_system/font-size" as *;
 
+.dark {
+  color-scheme: dark;
+}
+
+.light {
+  color-scheme: light;
+}
+
+// Scrollbar-width is needed from scrollbar to show in Chrome
+.dark,
+.light {
+  // Needed here for vertical scroll
+  overflow: auto;
+  scrollbar-width: thin;
+}
+
 .editor {
   display: flex;
   flex-flow: column;
@@ -16,6 +32,7 @@
     }
 
     .cm-scroller {
+      // Needed here for horizontal scroll
       overflow: auto;
       scrollbar-width: thin;
       overscroll-behavior-x: none;
