--- a/src/assets/stylesheets/PythonRunner.scss
+++ b/src/assets/stylesheets/PythonRunner.scss
@@ -113,15 +113,20 @@
   }
 }
 
-.main-svg:nth-of-type(2) {
-  position: relative;
-  bottom: 100%;
-}
+// .main-svg:nth-of-type(2) {
+//   position: relative;
+//   bottom: 100%;
+//   z-index: 1;
+// }
 
-.main-svg:last-of-type {
-  position: relative;
-  bottom: 200%;
-}
+// .main-svg:last-of-type {
+//   position: relative;
+//   bottom: 200%;
+// }
+
+// .modebar-container {
+//   display: flex;
+// }
 
 
   .--light .output-panel--single, .--dark .output-panel--single {
