--- a/src/assets/stylesheets/ExternalStyles.scss
+++ b/src/assets/stylesheets/ExternalStyles.scss
@@ -3,4 +3,5 @@
 @use "../../../node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css";
 @use "../../../node_modules/prismjs/plugins/line-highlight/prism-line-highlight.css";
 @use "../../../node_modules/@raspberrypifoundation/design-system-core/scss/components/alert.scss";
-@use "../../../node_modules/material-symbols/sharp.scss";
+
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp");
