Change horizontal scrollbar to show when needed not just bottom page (#1257)
closes
https://github.com/RaspberryPiFoundation/digital-editor-issues/issues/877

**### Screenshots:**

**Scrollbar at the bottom with no vertical scroll:**
<img width="654" height="572" alt="image"
src="https://github.com/user-attachments/assets/69d48146-67db-4390-820d-045a8d0edd06"
/>

**Scrollbar still there when vertical scroll:**
<img width="654" height="572" alt="image"
src="https://github.com/user-attachments/assets/4ffcdf0c-f3cb-4829-9741-47dd8b5a8d2f"
/>

--- a/src/assets/stylesheets/EditorPanel.scss
+++ b/src/assets/stylesheets/EditorPanel.scss
@@ -6,6 +6,7 @@
   // Needed here for vertical scroll
   overflow: auto;
   scrollbar-width: thin;
+  height: 100%;
 }
 
 .editor {
@@ -13,6 +14,7 @@
   flex-flow: column;
   flex: 1;
   overflow: hidden;
+  height: 100%;
 
   .cm-editor {
     flex: 1;
