--- a/src/assets/stylesheets/Sidebar.scss
+++ b/src/assets/stylesheets/Sidebar.scss
@@ -102,6 +102,7 @@
   flex-direction: column;
   padding: $space-1;
   padding-block-end: 0;
+  position: relative;
   border-radius: 0 8px 8px 0;
   inline-size: inherit;
   background: var(--sidebar-panel-background);
