--- a/src/assets/stylesheets/EditorPanel.scss
+++ b/src/assets/stylesheets/EditorPanel.scss
@@ -29,6 +29,8 @@
       overflow: auto;
       scrollbar-width: thin;
       overscroll-behavior-x: none;
+      font-family: var(--font-family-monospace);
+      line-height: var(--line-height-1-5);
 
       .cm-content {
         flex: 1;
