--- a/src/assets/stylesheets/Button.scss
+++ b/src/assets/stylesheets/Button.scss
@@ -10,7 +10,7 @@
   color: inherit;
   cursor: pointer;
   display: inline-flex;
-  font-family: sans-serif;
+  font-family: var(--font-family-sans-serif);
   font-size: inherit;
   font-weight: $font-weight-bold;
   gap: $space-0-5;
