--- a/src/assets/stylesheets/InternalStyles.scss
+++ b/src/assets/stylesheets/InternalStyles.scss
@@ -43,15 +43,18 @@
 @use "./FilePanel" as *; // needs to be below Button
 @use "./EmbeddedViewer" as *;
 
+@use "./settings/fonts" as fonts;
+
 :host {
   font-size: 1.6rem;
 }
 
 #wc {
+  --font-family-sans-serif: #{fonts.$font-family-sans-serif};
+  --font-family-monospace: #{fonts.$font-family-monospace};
+
   background: var(--editor-secondary-theme, transparent);
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: var(--font-family-sans-serif);
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -83,8 +86,7 @@
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: var(--font-family-monospace);
 }
 
 button {
