--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -1,3 +1,4 @@
+@forward "./settings/fonts";
 @use "./rpf_design_system/colours" as *;
 
 html,
@@ -10,20 +11,25 @@ body {
 }
 
 body {
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: var(--font-family-sans-serif);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: var(--font-family-monospace);
 }
 
 #app {
   min-block-size: 100dvh;
+}
+
+#wc {
+  font-family: var(--font-family-sans-serif, sans-serif);
+
+  .code {
+    font-family: var(--font-family-monospace, monospace);
+  }
 }
 
 .--light, #wc.--light {
