Add `--wc-` prefix to new CSS vars; fix line spacing

--- a/src/assets/stylesheets/EditorPanel.scss
+++ b/src/assets/stylesheets/EditorPanel.scss
@@ -29,7 +29,7 @@
       overflow: auto;
       scrollbar-width: thin;
       overscroll-behavior-x: none;
-      font-family: var(--font-family-monospace);
+      font-family: var(--wc-font-family-monospace);
       line-height: var(--line-height-1-5);
 
       .cm-content {
