--- a/src/assets/stylesheets/InternalStyles.scss
+++ b/src/assets/stylesheets/InternalStyles.scss
@@ -50,11 +50,14 @@
 }
 
 #wc {
-  --font-family-sans-serif: #{fonts.$font-family-sans-serif};
-  --font-family-monospace: #{fonts.$font-family-monospace};
+  // Allow fonts to be overridden by the host application via
+  // --editor-font-family-*, falling back to the default sets in
+  // settings/fonts.scss
+  --wc-font-family-sans-serif: var(--editor-font-family-sans-serif), #{fonts.$font-family-sans-serif};
+  --wc-font-family-monospace: var(--editor-font-family-monospace), #{fonts.$font-family-monospace};
 
   background: var(--editor-secondary-theme, transparent);
-  font-family: var(--font-family-sans-serif);
+  font-family: var(--wc-font-family-sans-serif);
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -86,7 +89,7 @@
 }
 
 code {
-  font-family: var(--font-family-monospace);
+  font-family: var(--wc-font-family-monospace);
 }
 
 button {
