--- a/src/assets/stylesheets/AstroPiModel.scss
+++ b/src/assets/stylesheets/AstroPiModel.scss
@@ -99,7 +99,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          font-family: var(--font-family-monospace);
+          font-family: var(--wc-font-family-monospace);
 
           &-timer {
             margin-block-start: 0;
