--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -1,25 +1,24 @@
 @use "./rpf_design_system/colours" as *;
+@use './settings/fonts' as fonts;
 
 html,
 body {
   margin: 0;
 }
 
-:host {
-  font-size: 16px;
+:root {
+  --editor-font-family-sans-serif: fonts.$font-family-sans-serif;
+  --editor-font-family-monospace: fonts.$font-family-monospace;
 }
 
 body {
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: var(--editor-font-family-sans-serif);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: var(--editor-font-family-monospace);
 }
 
 #app {
