--- a/src/assets/stylesheets/Sidebar.scss
+++ b/src/assets/stylesheets/Sidebar.scss
@@ -131,6 +131,12 @@
   scrollbar-width: thin;
 }
 
+.sidebar__panel-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: $space-1;
+}
+
 .sidebar__panel-footer {
   border-block-start: 1px solid $rpf-grey-150;
   inset-block-end: 0px;
