--- a/src/assets/stylesheets/ErrorMessage.scss
+++ b/src/assets/stylesheets/ErrorMessage.scss
@@ -22,3 +22,14 @@
     @include font-size-2(regular);
   }
 }
+
+.error-explanation {
+  margin-block-start: $space-1-25;
+  padding: $space-1-25;
+  background-color: #fff;
+
+  .pfe-summary {
+    margin-block-start: $space-1-25;
+    margin-block-end: $space-1-25;
+  }
+}
