--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -98,8 +98,8 @@ code {
     --rpf-button-tertiary-text-color-hover: var(--rpf-grey-200);
 
     --rpf-button-tertiary-danger-text-color: var(--rpf-red-600);
-    // --rpf-button-tertiary-danger-background-color-hover: var(--rpf-red-400);
-    --rpf-button-tertiary-danger-background-color-hover: rgba(255, 255, 255, 0.1); ;
+    --rpf-button-tertiary-danger-background-color-hover: rgba(255, 255, 255, 0.1);
+    --rpf-button-tertiary-danger-background-color-active: rgba(255, 255, 255, 0.15);
   }
 
   .rpf-button--secondary {
@@ -128,8 +128,8 @@ code {
   --rpf-button-tertiary-text-color-hover: var(--rpf-grey-600);
 
   --rpf-button-tertiary-danger-text-color: var(--rpf-alert-error);
-  // --rpf-button-tertiary-danger-background-color-hover: #{$rpf-alerts-error-tint};
-  --rpf-button-tertiary-danger-background-color-hover: var(--rpf-grey-100); ;
+  --rpf-button-tertiary-danger-background-color-hover: rgba(0, 0, 0, 0.03);
+  --rpf-button-tertiary-danger-background-color-active: rgba(0, 0, 0, 0.05);
 
   .rpf-button--secondary {
     border-color: var(--rpf-teal-800);
