Extending danger button styling (#1280)
## What's Changed?

- Added tertiary danger button styles

![Danger
danger](https://media4.giphy.com/media/YAlhwn67KT76E/giphy.gif?cid=6104955eirkur0p4gn96o0fyyjdrq6kzn0l17cwwqu26ojny&ep=v1_gifs_translate&rid=giphy.gif&ct=g)

related to
https://github.com/RaspberryPiFoundation/digital-editor-issues/issues/948

--- a/src/assets/stylesheets/Button.scss
+++ b/src/assets/stylesheets/Button.scss
@@ -227,6 +227,23 @@
       border: 2px solid transparent;
       outline: 3px solid $rpf-brand-raspberry;
     }
+
+    &.btn--tertiary {
+      background-color: inherit;
+      color: var(--rpf-button-tertiary-danger-text-color);
+
+      svg {
+        fill: var(--rpf-button-tertiary-danger-text-color);
+      }
+
+      &:hover {
+        background-color: var(--rpf-button-tertiary-danger-background-color-hover);
+      }
+
+      &:active {
+        background-color: var(--rpf-button-tertiary-danger-background-color-active);
+      }
+    }
   }
 
   &--small {
